--- a/templates/calculations/hydrometer-correction-chart.html.twig
+++ b/templates/calculations/hydrometer-correction-chart.html.twig
@@ -1,8 +1,8 @@
 {% extends 'calculations/layout.html.twig' %}
 {% set pageTitle = 'Hydrometer Temperature Correction' %}
 {% set activeMenu = 'calculations' %}
+{% set pageIcon = 'fa-thermometer-full' %}
 
 {% block content %}
-<h1><i class="fa fa-thermometer-full"></i> {{ pageTitle }}</h1>
 
 {% endblock %}
