--- a/templates/calculations/index.html.twig
+++ b/templates/calculations/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'calculations/layout.html.twig' %}
 {% set pageTitle = 'beeriously.calculations.calculations'|trans %}
+{% set pageIcon = 'fa fa-calculator' %}
 {% set activeMenu = 'calculations' %}
 
 {% block content %}
-    <h1><i class="fa fa-calculator"></i> {{ pageTitle }}</h1>
     <ul>
         {#<li><a href="/calculations/hydrometer-correction-chart">Hydrometer Temperature Correction</a></li>#}
     </ul>
