--- a/templates/dashboard/dashboard.html.twig
+++ b/templates/dashboard/dashboard.html.twig
@@ -1,10 +1,9 @@
 {% extends 'layout.html.twig' %}
 {% set pageTitle = 'beeriously.dashboard.dashboard'|trans %}
 {% set activeMenu = 'dashboard' %}
+{% set pageIcon = 'fa fa-dashboard' %}
 
 {% block content %}
-    <h1><i class="fa fa-dashboard"></i> {{ pageTitle }}</h1>
-
     {#<div class="alert alert-danger">You must setup an equipment profile.<br><a href="">Setup Equipment</a></div>#}
     {#<div class="alert alert-danger">You must setup a water profile.<br><a href="">Setup Water</a></div>#}
     {#<hr>#}
