--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -20,13 +20,13 @@
             <div id="beeriously-nav-menu" class="beeriously-nav-menu-hidden">
                 <div id="beeriously-nav-menu-app-menu">
                     <a href="{{ path('dashboard') }}" class="{% if activeMenu == 'dashboard' %} beeriously-nav-menu-active {% endif %}"><i class="fa fa-fw fa-dashboard"></i> {{ 'beeriously.dashboard.dashboard'|trans }}<span><i class="fa fa-fw fa-chevron-right"></i></span></a>
-                    <a href="/equipment" class="{% if activeMenu == 'equipment' %} beeriously-nav-menu-active {% endif %}"><img src="/assets/img/brew-kettle/brew-kettle.svg"> Brewing<span><i class="fa fa-fw fa-chevron-right"></i></span></a>
-                    <a href="/recipes" class="{% if activeMenu == 'recipes' %} beeriously-nav-menu-active {% endif %}"><i class="fa fa-fw fa-file-text-o"></i> Recipes<span><i class="fa fa-fw fa-chevron-right"></i></span></a>
-                    <a href="/inventory" class="{% if activeMenu == 'inventory' %} beeriously-nav-menu-active {% endif %}"><i class="fa fa-fw fa-line-chart"></i> Inventory<span><i class="fa fa-fw fa-chevron-right"></i></span></a>
-                    <a href="/purchasing" class="{% if activeMenu == 'purchasing' %} beeriously-nav-menu-active {% endif %}"><i class="fa fa-fw fa-shopping-cart"></i> Shopping List<span><i class="fa fa-fw fa-chevron-right"></i></span></a>
-                    <a href="/equipment" class="{% if activeMenu == 'equipment' %} beeriously-nav-menu-active {% endif %}"><img src="/assets/img/fermentation-tank/fermentation-tank.svg"> Equipment<span><i class="fa fa-fw fa-chevron-right"></i></span></a>
+                    {#<a href="/equipment" class="{% if activeMenu == 'equipment' %} beeriously-nav-menu-active {% endif %}"><img src="/assets/img/brew-kettle/brew-kettle.svg"> Brewing<span><i class="fa fa-fw fa-chevron-right"></i></span></a>#}
+                    {#<a href="/recipes" class="{% if activeMenu == 'recipes' %} beeriously-nav-menu-active {% endif %}"><i class="fa fa-fw fa-file-text-o"></i> Recipes<span><i class="fa fa-fw fa-chevron-right"></i></span></a>#}
+                    {#<a href="/inventory" class="{% if activeMenu == 'inventory' %} beeriously-nav-menu-active {% endif %}"><i class="fa fa-fw fa-line-chart"></i> Inventory<span><i class="fa fa-fw fa-chevron-right"></i></span></a>#}
+                    {#<a href="/purchasing" class="{% if activeMenu == 'purchasing' %} beeriously-nav-menu-active {% endif %}"><i class="fa fa-fw fa-shopping-cart"></i> Shopping List<span><i class="fa fa-fw fa-chevron-right"></i></span></a>#}
+                    {#<a href="/equipment" class="{% if activeMenu == 'equipment' %} beeriously-nav-menu-active {% endif %}"><img src="/assets/img/fermentation-tank/fermentation-tank.svg"> Equipment<span><i class="fa fa-fw fa-chevron-right"></i></span></a>#}
                     <a href="{{ path('calculations') }}" class="{% if activeMenu == 'calculations' %} beeriously-nav-menu-active {% endif %}"><i class="fa fa-fw fa-calculator"></i> {{ 'beeriously.calculations.calculations'|trans }}<span><i class="fa fa-fw fa-chevron-right"></i></span></a>
-                    <a href="/water" class="{% if activeMenu == 'water' %} beeriously-nav-menu-active {% endif %}"><i class="fa fa-fw fa-tint"></i> Water<span><i class="fa fa-fw fa-chevron-right"></i></span></a>
+                    {#<a href="/water" class="{% if activeMenu == 'water' %} beeriously-nav-menu-active {% endif %}"><i class="fa fa-fw fa-tint"></i> Water<span><i class="fa fa-fw fa-chevron-right"></i></span></a>#}
                     <a href="{{ path('brewery') }}" class="{% if activeMenu == 'brewery' %} beeriously-nav-menu-active {% endif %}"><i class="fa fa-fw fa-users"></i> {{ 'beeriously.brewery.brewery'|trans }}<span><i class="fa fa-fw fa-chevron-right"></i></span></a>
                 </div>
                 <span class="beeriously-nav-menu-separator"></span>
@@ -42,6 +42,18 @@
             </div>
         </nav>
         <div id="beeriously-content">
+            <h1><i class="{{ pageIcon }}">&nbsp;</i>{{ pageTitle }}</h1>
+        <hr>
+        {% block flash_messages %}
+            {% for type, messages in app.session.flashbag.all() %}
+                {% for message in messages %}
+                    <div class="alert alert-{{ type }} alert-dismissible" role="alert">
+                        <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                        {{ message | trans }}
+                    </div>
+                {% endfor %}
+            {% endfor %}
+        {% endblock %}
         {% block content %}{% endblock %}
         </div>
     </div>
