--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -15,7 +15,7 @@
                 <div id="beeriously-nav-menu-logo">
                     <a  href="/"><img  src="/assets/img/logo/beeriously-logo-square.png"></a>
                 </div>
-                <button class="btn btn-default"><i class="fa fa-bars"></i> Menu</button>
+                <button class="btn btn-default" data-menu-text="{{ 'beeriously.global.menu'|trans }}" data-menu-close-text="{{ 'beeriously.global.close'|trans }}"><i class="fa fa-bars"></i> {{ 'beeriously.global.menu'|trans }}</button>
             </div>
             <div id="beeriously-nav-menu" class="beeriously-nav-menu-hidden">
                 <div id="beeriously-nav-menu-app-menu">
