wip: brewery settings

--- a/templates/brewery/brewery.html.twig
+++ b/templates/brewery/brewery.html.twig
@@ -28,6 +28,10 @@
                 $('#beeriously-add-brewer-form').hide();
             });
         });
+
+        $(document).ready(function () {
+            $('.beeriously-delete-brewer-button').click(Beeriously.remoteModalFollow);
+        });
     </script>
 {% endblock %}
 
