--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -9,6 +9,10 @@ $footerBackgroundColor: darken($contentBackgroundColor, 6%);
 @import "~font-awesome/scss/font-awesome.scss";
 @import "external-login-registration";
 
+.alert {
+  padding: 0.75rem 1.75rem 0.75rem 1.25rem;
+}
+
 body {
   background: $footerBackgroundColor;
   font-family: 'Open Sans', sans-serif;
@@ -226,8 +230,7 @@ footer {
   }
 }
 
-.beeriously-history
-{
+.beeriously-history {
   font-size: 0.9em;
   padding-bottom: 1em;
 
@@ -241,11 +244,11 @@ footer {
   }
 }
 
-
 .two-column-page-label {
   font-size: 1em;
   font-weight: 200;
 }
+
 .two-column-page-single-value {
   font-size: 1.5em;
   font-weight: 400;
@@ -257,7 +260,22 @@ footer {
 
 .clear-button-xl {
   background: none;
-  border:none;
+  border: none;
   padding: 1px 0 0 10px;
-  margin:0;
+  margin: 0;
+}
+
+#beeriously-loading-indicator {
+  display: none;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  z-index: 9999;
+  margin-top: -65px;
+  margin-left: -50px;
+  color: #000;
+}
+
+#beeriously-full-screen-loading-overlay {
+
 }
