--- a/templates/brewery/details/brewers.html.twig
+++ b/templates/brewery/details/brewers.html.twig
@@ -25,9 +25,11 @@
         <thead>
         <tr>
             <th>{{ 'beeriously.brewery.brewer_table.name'|trans }}</th>
-            <th>{{ 'beeriously.brewery.brewer_table.username'|trans }}</th>
             <th>{{ 'beeriously.brewery.brewer_table.email'|trans }}</th>
-            <th>&nbsp;</th>
+            <th>{{ 'beeriously.brewery.brewer_table.username'|trans }}</th>
+            {% if is_granted(constant('\\Beeriously\\Brewer\\Infrastructure\\Roles::ROLE_OWNER_OF_BREWERY_ACCOUNT')) %}
+                <th>&nbsp;</th>
+            {% endif %}
         </tr>
         </thead>
         <tbody>
@@ -35,36 +37,42 @@
             <tr>
                 <td>
                     <p>{{ brewer.fullName }}
-                {% if brewer is same as(brewery.accountOwner) %}
+                {% if is_granted(constant('\\Beeriously\\Brewer\\Infrastructure\\Roles::ROLE_OWNER_OF_BREWERY_ACCOUNT')) %}
                     <br><span class="badge badge-pill badge-dark">{{ 'beeriously.brewery.brewer_table.owner'|trans }}</span>
                 {% endif %}
                     </p>
                 </td>
-                <td>{{ brewer.username }}</td>
                 <td>{{ brewer.email }}</td>
                 <td>
-                    {% if brewer is same as(app.user) %}
-                        <a href="{{ path('fos_user_profile_show') }}">{{ 'beeriously.layout.profile'|trans }}</a>
-                    {% elseif app.user is same as(brewery.accountOwner) %}
-                        <button class="btn btn-default btn-sm"><i class="fa fa-times-circle-o"></i> {{ 'beeriously.global.delete'|trans }}</button>
+                    <div>
+                        {{ brewer.username }}
+                    </div>
+                    <div>
+                        {% if brewer is same as(app.user) %}
+                            <a href="{{ path('fos_user_profile_show') }}">{{ 'beeriously.layout.profile'|trans }}</a>
+                        {% endif %}
+                    </div>
+                </td>
+                {% if is_granted(constant('\\Beeriously\\Brewer\\Infrastructure\\Roles::ROLE_OWNER_OF_BREWERY_ACCOUNT')) %}
+                <td>
+                    {% if brewer is not same as(app.user) %}
+                        <button class="btn btn-default btn-sm beeriously-delete-brewer-button" data-beeriously-modal-url="{{ path('brewery-delete-brewer-modal',{'id':brewer.id })}}"><i class="fa fa-times-circle-o"></i> {{ 'beeriously.global.delete'|trans }}</button>
                     {% endif %}
                 </td>
+                {% endif %}
             </tr>
         {% endfor %}
         </tbody>
     </table>
-    {% for brewer in brewery.brewers %}
-    {% endfor %}
     </div>
-    {% if app.user is same as(brewery.accountOwner) %}
+    {% if is_granted(constant('\\Beeriously\\Brewer\\Infrastructure\\Roles::ROLE_OWNER_OF_BREWERY_ACCOUNT')) %}
         <div id="beeriously-add-brewer-form-button">
-        <button type="button" class="btn btn-default btn-sm"><i class="fa fa-plus"></i> {{ 'beeriously.brewery.add_a_brewer' | trans }}</button>
+        <button type="button" class="btn btn-default btn-sm"><i class="fa fa-plus"></i> {{ 'beeriously.brewery.add_an_assistant_brewer' | trans }}</button>
         </div>
         <div id="beeriously-add-brewer-form" class="card card-form" style="display: none">
-            <h3>{{ 'beeriously.brewery.add_a_brewer' | trans }}</h3>
+            <h3>{{ 'beeriously.brewery.add_an_assistant_brewer' | trans }}</h3>
             {{ form_start(addBrewerForm) }}
             {{ form_end(addBrewerForm) }}
-            {{ form_widget(addBrewerForm) }}
         </div>
     {% endif %}
 {% endblock %}
