remote forms for delete / add brewer

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -279,3 +279,11 @@ footer {
 #beeriously-full-screen-loading-overlay {
 
 }
+
+.x-scroll {
+  overflow-x: auto;
+}
+
+.card-form {
+  padding: 1.5em;
+}
