--- a/templates/brewery/details/name.html.twig
+++ b/templates/brewery/details/name.html.twig
@@ -1,22 +1,6 @@
 {% extends 'partials/two-column.html.twig' %}
 {% set label = 'beeriously.brewery.name'|trans %}
 
-{% form_theme changeNameForm _self %}
-
-{% block _change_name_name_row -%}
-    <div class="form-group">
-        <div class="form-row">
-            <div class="col-7">
-                {{ form_widget(form, { 'attr': {'class': 'form-control-lg'} }) }}
-            </div>
-            <div class="col">
-                <button class="clear-button-xl" type="submit"><i class="fa fa-check-circle fa-3x"></i></button>
-                <button class="clear-button-xl" type="reset" id="beeriously-brewery-cancel-change-brewery-name"><i class="fa fa-times-circle fa-3x"></i></button>
-            </div>
-        </div>
-    </div>
-{%- endblock %}
-
 {% block content %}
     <div id="beeriously-brewery-name-display">
         <p class="two-column-page-single-value">
@@ -24,11 +8,11 @@
         </p>
         {% if is_granted(constant('\\Beeriously\\Brewer\\Infrastructure\\Roles::ROLE_OWNER_OF_BREWERY_ACCOUNT')) %}
         <p>
-            <button type="button" class="btn btn-default btn-sm" id="beeriously-brewery-change-brewery-name"><i class="fa fa-edit"></i> {{ 'beeriously.brewery.change_name'|trans }}</button>
+            <button type="button" class="btn btn-default btn-sm" id="beeriously-brewery-change-brewery-name" data-beeriously-remote-form-url="{{ path('brewery-change-name')}}"><i class="fa fa-edit"></i> {{ 'beeriously.brewery.change_name'|trans }}</button>
         </p>
         {% endif %}
     </div>
     <div id="beeriously-change-brewery-name-form" style="display: none">
-        {{ form(changeNameForm) }}
+        <i class="fa fa-fw fa-3x fa-spin fa-circle-o-notch" style="display: none"></i>
     </div>
 {% endblock %}
