--- a/templates/bundles/FOSUserBundle/Profile/partial/password.html.twig
+++ b/templates/bundles/FOSUserBundle/Profile/partial/password.html.twig
@@ -6,6 +6,6 @@
         <p class="two-column-page-single-value">
             <i class="fa fa-lock"> </i> *******
         </p>
-        {#<a href="" class="btn btn-default btn-sm"><i class="fa fa-edit"></i> {{ 'beeriously.profile.change_password'|trans }}</a>#}
+        <a href="{{ path('fos_user_change_password') }}" class="btn btn-default btn-sm"><i class="fa fa-edit"></i> {{ 'beeriously.profile.change_password'|trans }}</a>
     </div>
 {% endblock %}
