fix erroneous div ids (copy and pasta error)

--- a/templates/bundles/FOSUserBundle/Profile/partial/username-email.html.twig
+++ b/templates/bundles/FOSUserBundle/Profile/partial/username-email.html.twig
@@ -2,7 +2,7 @@
 {% set label = 'beeriously.layout.profile'|trans %}
 
 {% block content %}
-    <div id="beeriously-brewer-details">
+    <div>
         <table class="table table-bordered bg-white">
             <tbody>
             <tr>
