--- a/templates/bundles/FOSUserBundle/Profile/partial/brewery.html.twig
+++ b/templates/bundles/FOSUserBundle/Profile/partial/brewery.html.twig
@@ -2,7 +2,7 @@
 {% set label = 'beeriously.profile.brewery_name'|trans %}
 
 {% block content %}
-    <div id="beeriously-brewer-details">
+    <div>
         <p class="two-column-page-single-value">
             {{ user.brewery.name }}
             <small style="display: block"><a href="{{ path('brewery') }}">{{ 'beeriously.profile.view_brewery_settings'|trans }}</a></small>
