--- a/templates/bundles/FOSUserBundle/Profile/partial/name.html.twig
+++ b/templates/bundles/FOSUserBundle/Profile/partial/name.html.twig
@@ -2,7 +2,7 @@
 {% set label = 'beeriously.brewer.name'|trans %}
 
 {% block content %}
-    <div id="beeriously-brewer-details">
+    <div>
         <p class="two-column-page-single-value">
             {{ user.fullName }}
         </p>
