--- a/templates/bundles/FOSUserBundle/Profile/partial/password.html.twig
+++ b/templates/bundles/FOSUserBundle/Profile/partial/password.html.twig
@@ -2,7 +2,7 @@
 {% set label = 'beeriously.profile.password'|trans %}
 
 {% block content %}
-    <div id="beeriously-brewer-details">
+    <div>
         <p class="two-column-page-single-value">
             <i class="fa fa-lock"> </i> *******
         </p>
