--- a/templates/dashboard/dashboard.html.twig
+++ b/templates/dashboard/dashboard.html.twig
@@ -4,6 +4,9 @@
 {% set pageIcon = 'fa fa-dashboard' %}
 
 {% block content %}
+    <div class="alert alert-danger">What can Beeriously do? Absolutely nothing, yet. <a href="https://en.wikipedia.org/wiki/The_Pitch_(Seinfeld)"> It is a software about nothing.</a></div>
+
+
     {#<div class="alert alert-danger">You must setup an equipment profile.<br><a href="">Setup Equipment</a></div>#}
     {#<div class="alert alert-danger">You must setup a water profile.<br><a href="">Setup Water</a></div>#}
     {#<hr>#}
