--- a/templates/bundles/FOSUserBundle/Profile/show.html.twig
+++ b/templates/bundles/FOSUserBundle/Profile/show.html.twig
@@ -3,8 +3,10 @@
 {% set pageIcon = 'fa fa-users' %}
 
 {% block content %}
-    <div class="fos_user_user_show">
+    <div class="fos_user_user_show" id="beeriously-user-profile">
     {{ include('bundles/FOSUserBundle/Profile/partial/name.html.twig') }}
+    <hr>
+    {{ include('bundles/FOSUserBundle/Profile/partial/photo.html.twig') }}
     <hr>
     {{ include('bundles/FOSUserBundle/Profile/partial/brewery.html.twig') }}
     <hr>
