Add flash message to fosuserbundle pages

--- a/templates/bundles/FOSUserBundle/layout.html.twig
+++ b/templates/bundles/FOSUserBundle/layout.html.twig
@@ -4,6 +4,16 @@
         <div id="beeriously-external-logo">
             <a href="{{ path('root') }}"><img  src="/assets/img/logo/beeriously-logo-square.png"></a>
         </div>
+        {% block flash_messages %}
+            {% for type, messages in app.session.flashbag.all() %}
+                {% for message in messages %}
+                    <div class="alert alert-{{ type }} alert-dismissible" role="alert">
+                        <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                        {{ message | trans }}
+                    </div>
+                {% endfor %}
+            {% endfor %}
+        {% endblock %}
         {% block fos_user_content %}{% endblock %}
         {% block footer %}
         <div class="beeriously-security-footer">
