Change brewer name, grab avatar from gravatar and place in storage  (#64)
Change brewer password, change brewer name. Grab avatar from gravatar and place in storage Closes #58. Closes #56. Closes #57.

--- a/templates/bundles/FOSUserBundle/Profile/partial/password.html.twig
+++ b/templates/bundles/FOSUserBundle/Profile/partial/password.html.twig
@@ -2,10 +2,10 @@
 {% set label = 'beeriously.profile.password'|trans %}
 
 {% block content %}
-    <div id="beeriously-brewer-details">
+    <div>
         <p class="two-column-page-single-value">
             <i class="fa fa-lock"> </i> *******
         </p>
-        {#<a href="" class="btn btn-default btn-sm"><i class="fa fa-edit"></i> {{ 'beeriously.profile.change_password'|trans }}</a>#}
+        <a href="{{ path('fos_user_change_password') }}" class="btn btn-default btn-sm"><i class="fa fa-edit"></i> {{ 'beeriously.profile.change_password'|trans }}</a>
     </div>
 {% endblock %}
