--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -1,8 +1,10 @@
 {% extends 'base.html.twig' %}
+
 {% block stylesheets %}
 <link rel="stylesheet" href="{{ asset('build/css/app.css') }}">
 <link rel="stylesheet" href="{{ asset('assets/css/open-sans.css') }}">
 {% endblock %}
+
 {% block javascripts %}
 <script src="{{ asset('build/js/app.js') }}"></script>
 <script>
@@ -36,7 +38,7 @@ Beeriously.messages['beeriously.ajax.default_error_message'] = "{{ 'beeriously.a
                 <span class="beeriously-nav-menu-separator"></span>
                 <div id="beeriously-nav-menu-profile">
                     <div id="beeriously-nav-menu-profile-image">
-                     <img src="/assets/img/user/user.png">
+                     <img src="{{ beeriously_file(app.user.profilePhotoKey) }}">
                     </div>
                     <ul id="beeriously-nav-menu-profile-details">
                         <li>{{ app.user.getFullName }}<br>({{ app.user.getUsername }})</li>
