--- a/templates/bundles/FOSUserBundle/Profile/partial/name.html.twig
+++ b/templates/bundles/FOSUserBundle/Profile/partial/name.html.twig
@@ -2,10 +2,10 @@
 {% set label = 'beeriously.brewer.name'|trans %}
 
 {% block content %}
-    <div id="beeriously-brewer-details">
+    <div>
         <p class="two-column-page-single-value">
             {{ user.fullName }}
         </p>
-        {#<a href="" class="btn btn-default btn-sm"><i class="fa fa-edit"></i> {{ 'beeriously.profile.change_name'|trans }}</a>#}
+        <a href="{{ path('brewer-change-name') }}" class="btn btn-default btn-sm"><i class="fa fa-edit"></i> {{ 'beeriously.profile.change_name'|trans }}</a>
     </div>
 {% endblock %}
