--- a/templates/brewery/details/brewers.html.twig
+++ b/templates/brewery/details/brewers.html.twig
@@ -2,55 +2,41 @@
 {% set label = 'beeriously.brewery.brewers'|trans %}
 
 {% block content %}
-    <div class="x-scroll" style="">
-    <table class="table table-bordered" id="beeriously-brewery-settings-brewers-table">
-        <thead>
-        <tr>
-            <th></th>
-            <th>{{ 'beeriously.brewery.brewer_table.name'|trans }}</th>
-            <th>{{ 'beeriously.brewery.brewer_table.username'|trans }}</th>
-            <th>{{ 'beeriously.brewery.brewer_table.email'|trans }}</th>
-            {% if is_granted(constant('\\Beeriously\\Brewer\\Infrastructure\\Roles::ROLE_OWNER_OF_BREWERY_ACCOUNT')) and (brewery.brewers | length > 1) %}
-                <th>&nbsp;</th>
-            {% endif %}
-        </tr>
-        </thead>
-        <tbody>
-        {% for brewer in brewery.brewers %}
-            <tr>
-                <td><img style="width: 50px" src="{{ beeriously_file(brewer.profilePhotoKey) }}" /></td>
-                <td>
-                    <p>{{ brewer.fullName }}
+    <style>
+        #beeriously-brewery-settings-brewers-list ul li p {
+            margin: 0;
+        }
+        #beeriously-brewery-settings-brewers-list ul li img {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+        }
+    </style>
+    <div id="beeriously-brewery-settings-brewers-list">
+        <ul class="list-group">
+            {% for brewer in brewery.brewers %}
+            <li class="list-group-item">
+                <img src="{{ beeriously_file(brewer.profilePhotoKey) }}">
+                <h5>{{ brewer.fullName }}</h5>
+                <p class="card-text text-muted">{{ brewer.username }}</p>
+                <p><a href="mailto:{{ brewer.email }}">{{ brewer.email }}</a></p>
                 {% if brewer.hasRole(constant('\\Beeriously\\Brewer\\Infrastructure\\Roles::ROLE_OWNER_OF_BREWERY_ACCOUNT')) %}
-                    <br><span class="badge badge-pill badge-dark">{{ 'beeriously.brewery.brewer_table.owner'|trans }}</span>
+                    <p><span class="badge badge-pill badge-dark">{{ 'beeriously.brewery.brewer_table.owner'|trans }}</span></p>
                 {% endif %}
-                    </p>
-                </td>
-                <td>
-                    <div>
-                        {{ brewer.username }}
-                    </div>
-                    <div>
-                        {% if brewer is same as(app.user) %}
-                            <a href="{{ path('fos_user_profile_show') }}">{{ 'beeriously.layout.profile'|trans }}</a>
-                        {% endif %}
-                    </div>
-                </td>
-                <td><a href="mailto:{{ brewer.email }}">{{ brewer.email }}</a></td>
+                {% if brewer is same as(app.user) %}
+                    <a href="{{ path('fos_user_profile_show') }}">{{ 'beeriously.layout.profile'|trans }}</a>
+                {% endif %}
                 {% if is_granted(constant('\\Beeriously\\Brewer\\Infrastructure\\Roles::ROLE_OWNER_OF_BREWERY_ACCOUNT')) and (brewery.brewers | length > 1) %}
-                <td>
                     {% if brewer is not same as(app.user) %}
-                        <button class="btn btn-default btn-sm beeriously-delete-brewer-button" data-beeriously-modal-url="{{ path('brewery-delete-brewer-modal',{'id':brewer.id })}}"><i class="fa fa-times-circle-o"></i> {{ 'beeriously.global.delete'|trans }}</button>
+                        <button class="btn btn-danger btn-sm beeriously-delete-brewer-button" data-beeriously-modal-url="{{ path('brewery-delete-brewer-modal',{'id':brewer.id })}}"><i class="fa fa-times"></i> {{ 'beeriously.global.delete'|trans }}</button>
                     {% endif %}
-                </td>
                 {% endif %}
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+            </li>
+            {% endfor %}
+        </ul>
     </div>
     {% if is_granted(constant('\\Beeriously\\Brewer\\Infrastructure\\Roles::ROLE_OWNER_OF_BREWERY_ACCOUNT')) %}
-        <div>
+        <div style="padding-top: 20px">
             <button id="beeriously-add-brewer-form-button" type="button" class="btn btn-default btn-sm" data-beeriously-remote-form-url="{{ path('brewery-add-brewer-form')}}"><i class="fa fa-plus"></i> {{ 'beeriously.brewery.add_an_assistant_brewer' | trans }}</button>
         </div>
         <div id="beeriously-add-brewer-form" class="card card-form" style="display: none">
